--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,19 @@
 body {
-    color: darkorchid;
+    color: rgb(16, 77, 19);
     text-align: center;
     font-family: "Arial";
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+}
+#container{
+    width: 70%;
+    padding: len;
+    text-align: left;
+    border: 1px solid #252525;
+    margin: 0 auto;
+}
+
+#container h1{
+    font-size: 20px;
 }
