--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,7 +8,7 @@ body {
 }
 #container{
     width: 70%;
-    padding: len;
+    padding: 0;
     text-align: left;
     border: 1px solid #252525;
     margin: 0 auto;
@@ -16,4 +16,18 @@ body {
 
 #container h1{
     font-size: 20px;
+}
+#cabecera{
+    background: #722994;
+    box-shadow: 0px 2px 50px 0px rgba(0,0,0,0.5);
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
+
+#cabecera #tagline{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
 }
