--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body {
     color: rgb(16, 77, 19);
     text-align: center;
-    font-family: 'Courier';
+    font-family: 'Arial';
     font-size: 16px;
     margin: 0;
     padding: 0;
