--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,5 @@
 body {
+    background:#2e2e33;
     color: #333;
     text-align: center;
     font-family: 'Arial';
@@ -18,16 +19,25 @@ body {
     font-size: 20px;
 }
 #cabecera{
-    background: #722994;
-    box-shadow: 0px 2px 50px 0px rgba(0,0,0,0.5);
+    background: #37488b; 
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
     color: rgb(255, 255, 255);
     font-weight: bold;
     margin: 0;
-    padding: 0.5em;
+    padding: 0.5em 0 0.5em 2em;
+}
+#cabacera #logo{
+    width: 20px;
+    vertical-align: middle;
+     
 }
 
 #cabecera #tagline{
     padding: 0 0 0 1em;
     font-weight: normal;
     font-size: 0.8em;
+}
+#post{
+    background: white;
+    padding: 1em;
 }
