--- a/css/estilos.css
+++ b/css/estilos.css
@@ -31,3 +31,13 @@ body {
     font-weight: normal;
     font-size: 0.8em;
 }
+#post{
+    padding: 20px;
+}
+#footer{
+    background: #777;
+    color: white;
+    text-align:center ;
+    padding: 0.5em;
+    
+}
